objects/BenefitDisbursement.object
<CustomObject>
    <fields>
        <fullName>API_DateCreated__c</fullName>
        <formula>TEXT(YEAR(DATEVALUE( CreatedDate )))&amp; &quot;-&quot;&amp;

LPAD(TEXT(MONTH(DATEVALUE(CreatedDate))), 2, &quot;0&quot;)&amp; &quot;-&quot; &amp;

LPAD(TEXT(DAY(DATEVALUE(CreatedDate))), 2, &quot;0&quot;)&amp; &quot; &quot;&amp;

LEFT(RIGHT(text( CreatedDate ),9),8)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_DateCreated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_DateProvided__c</fullName>
        <formula>If(NOT(ISBLANK( ActualCompletionDate )),

TEXT(YEAR(DATEVALUE( ActualCompletionDate )))&amp; &quot;-&quot;&amp;

LPAD(TEXT(MONTH(DATEVALUE(ActualCompletionDate))), 2, &quot;0&quot;)&amp; &quot;-&quot; &amp;

LPAD(TEXT(DAY(DATEVALUE(ActualCompletionDate))), 2, &quot;0&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_DateProvided</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_DateUpdated__c</fullName>
        <formula>If(NOT(ISBLANK( LastModifiedDate )),

TEXT(YEAR(DATEVALUE(LastModifiedDate )))&amp; &quot;-&quot;&amp;

LPAD(TEXT(MONTH(DATEVALUE(LastModifiedDate))), 2, &quot;0&quot;)&amp; &quot;-&quot; &amp;

LPAD(TEXT(DAY(DATEVALUE(LastModifiedDate))), 2, &quot;0&quot;)&amp; &quot; &quot;&amp;

LEFT(RIGHT(text(LastModifiedDate),9),8),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_DateUpdated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_DeletedDate__c</fullName>
        <formula>If(NOT(ISBLANK(DeletedDate__c)),

TEXT(YEAR(DATEVALUE( DeletedDate__c )))&amp; &quot;-&quot;&amp;

LPAD(TEXT(MONTH(DATEVALUE(DeletedDate__c))), 2, &quot;0&quot;)&amp; &quot;-&quot; &amp;

LPAD(TEXT(DAY(DATEVALUE(DeletedDate__c))), 2, &quot;0&quot;)&amp; &quot; &quot;&amp;

LEFT(RIGHT(text(DeletedDate__c),9),8),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_DeletedDate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_FAAmount__c</fullName>
        <formula>text(floor( BenefitAssignment.FA_Amount__c )) &amp;&quot;.&quot;&amp; lpad(text(( BenefitAssignment.FA_Amount__c -floor( BenefitAssignment.FA_Amount__c ))*100),2,&quot;0&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_FAAmount</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_FAEndDate__c</fullName>
        <formula>If(NOT(ISBLANK(BenefitAssignment.EndDateTime )),
TEXT(YEAR(DATEVALUE( BenefitAssignment.EndDateTime )))&amp; &quot;-&quot;&amp;

LPAD(TEXT(MONTH(DATEVALUE(BenefitAssignment.EndDateTime ))), 2, &quot;0&quot;)&amp; &quot;-&quot; &amp;

LPAD(TEXT(DAY(DATEVALUE(BenefitAssignment.EndDateTime ))), 2, &quot;0&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_FAEndDate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_FAStartDate__c</fullName>
        <formula>If(NOT(ISBLANK(BenefitAssignment.StartDateTime )),
TEXT(YEAR(DATEVALUE( BenefitAssignment.StartDateTime )))&amp; &quot;-&quot;&amp;

LPAD(TEXT(MONTH(DATEVALUE(BenefitAssignment.StartDateTime ))), 2, &quot;0&quot;)&amp; &quot;-&quot; &amp;

LPAD(TEXT(DAY(DATEVALUE(BenefitAssignment.StartDateTime ))), 2, &quot;0&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_FAStartDate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_RecordType__c</fullName>
        <formula>TRIM(LEFT(TEXT( BenefitAssignment.Services_Record_Type__c ),FIND(&quot;: &quot;, TEXT( BenefitAssignment.Services_Record_Type__c))-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_RecordType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_ReferralOutcome__c</fullName>
        <formula>TRIM(LEFT(TEXT( BenefitAssignment.Referral_Outcome__c ),FIND(&quot;:&quot;, TEXT( BenefitAssignment.Referral_Outcome__c ))-1))</formula>
        <label>API_ReferralOutcome</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_Service_Record_Type__c</fullName>
        <formula>Text( BenefitAssignment.Services_Record_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Benefit Service Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_SubTypeProvided__c</fullName>
        <formula>TRIM( LEFT( TEXT(  BenefitAssignment.Sub_Type_Provided__c  ) , FIND( &quot;: &quot;, TEXT( BenefitAssignment.Sub_Type_Provided__c )) -1 ) )</formula>
        <label>API_SubTypeProvided</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_TypeProvided__c</fullName>
        <formula>TRIM(LEFT(TEXT(  BenefitAssignment.Services_Type_Provided__c  ),FIND(&quot;: &quot;, TEXT( BenefitAssignment.Services_Type_Provided__c))-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_TypeProvided</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefit_Other_Type_Provided__c</fullName>
        <formula>BenefitAssignment.Benefit.OtherTypeProvided__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Benefit Other Type Provided</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefit_Type_Provided__c</fullName>
        <formula>Text( BenefitAssignment.Benefit.ServicesTypeProvided__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Benefit Type Provided</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeletedDate__c</fullName>
        <label>DeletedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ExportID__c</fullName>
        <label>ExportID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FA_Amount__c</fullName>
        <formula>BenefitAssignment.FA_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FA Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MovingOnOtherType__c</fullName>
        <formula>BenefitAssignment.Moving_On_Other_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Moving On Other Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherTypeProvided__c</fullName>
        <formula>BenefitAssignment.Other_Type_Provided__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OtherTypeProvided</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgramID__c</fullName>
        <formula>BenefitAssignment.ProgramEnrollment.ProgramId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProgramID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Outcome__c</fullName>
        <formula>Text( BenefitAssignment.Referral_Outcome__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referral Outcome</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubTypeProvided__c</fullName>
        <formula>TEXT(  BenefitAssignment.Sub_Type_Provided__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub Type Provided</label>
        <type>Text</type>
    </fields>
</CustomObject>